--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "testcafe chrome main.test.js",
-    "test:ci": "testcafe chrome:headless **/* -r xunit:/tmp/test-results/res.xml"
+    "test:ci": "testcafe chrome:headless *.test.js -r xunit:/tmp/test-results/res.xml"
   },
   "author": "",
   "license": "ISC",
