--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^6.0.0",
     "testcafe": "^0.20.5",
     "testcafe-reporter-xunit": "^2.1.0"
   }
