--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,66 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/node:9.2.0-browsers
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
     working_directory: ~/repo
-
     steps:
       - checkout
-
-      # Download and cache dependencies
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
       - run: npm install
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
-      # run tests!
+  find_on_the_hunt_whiskeys:
+    docker:
+      - image: circleci/node:9.2.0-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
       - run: npm run test:ci
-
       - store_test_results:
           path: /tmp/test-results
+  find_wishlist_whiskeys:
+    docker:
+      - image: circleci/node:9.2.0-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "package.json" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run: DISTILLER_LIST=test npm run test:ci
+      - store_test_results:
+          path: /tmp/test-results
+workflows:
+  version: 2
+  commit:
+    jobs:
+      - build
+      - find_wishlist_whiskeys
+  weekly_on_the_hunt:
+    triggers:
+      - schedule:
+          cron: "0 8 * * 2,3,4"
+    jobs:
+      - build
+      - find_on_the_hunt_whiskeys
+  weekly_wishlist:
+    triggers:
+      - schedule:
+          cron: "0 8 * * 3"
+    jobs:
+      - build
+      - find_on_the_hunt_whiskeys
