--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ workflows:
     jobs:
       - build
       - find_wishlist_whiskeys
-  weekly_on_the_hunt:
+  nightly:
     triggers:
       - schedule:
           cron: "0 8 * * 2,3,4"
