--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ workflows:
   version: 2
   commit:
     jobs:
+      - build
       - find_wishlist_whiskeys:
           requires:
             - build
