--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run: DISTILLER_LIST=test npm run test:ci
+      - run: DISTILLER_LIST=wishlist npm run test:ci
       - store_test_results:
           path: /tmp/test-results
 workflows:
@@ -49,13 +49,26 @@ workflows:
   commit:
     jobs:
       - build
-      - find_wishlist_whiskeys:
+      - find_on_the_hunt_whiskeys:
           requires:
             - build
   weekly_on_the_hunt:
     triggers:
       - schedule:
           cron: "0 8 * * 2,3,4"
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - build
+      - find_on_the_hunt_whiskeys:
+          requires:
+            - build
+  weekly_wishlist:
+    triggers:
+      - schedule:
+          cron: "0 8 * * 3"
           filters:
             branches:
               only:
