Added slack notifications for results

--- a/.env-sample
+++ b/.env-sample
@@ -2,3 +2,4 @@ DISTILLER_EMAIL=email@gmail.com
 DISTILLER_PASSWORD=password
 DISTILLER_LIST=wishlist
 ABC_STORE_LIST=46,359
+SLACK_WEBHOOK_URL=https://myaccountname.slack.com/services/hooks/incoming-webhook?token=myToken
