--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "dotenv": "^6.0.0",
+    "slack-notify": "^0.1.6",
     "slugify": "^1.3.0",
     "testcafe": "^0.20.5",
     "testcafe-reporter-xunit": "^2.1.0"
