Changed to a daily run for list

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,10 +52,10 @@ workflows:
       - find_on_the_hunt_whiskeys:
           requires:
             - build
-  weekly_on_the_hunt:
+  daily_on_the_hunt:
     triggers:
       - schedule:
-          cron: "0 8 * * 2,3,4"
+          cron: "0 8 * * *"
           filters:
             branches:
               only:
